--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Shaka Player en Kodular - AutoPlay con Audio (Intento)</title>
+    <title>Shaka Player en Kodular - AutoPlay (Diagnóstico)</title>
     <meta charset="utf-8" />
     <meta name="referrer" content="no-referrer" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -32,69 +32,68 @@
             background-color: black; /* Fondo del reproductor de video */
         }
 
-        /* Oculta el botón de unmute, ya que intentaremos reproducir con audio directamente */
+        /* Oculta el botón de unmute por defecto. Se puede mostrar con JS si es necesario. */
         #unmuteButton {
-            display: none !important; 
-        }
-
-        /* Estilo para mensajes de error */
-        .error-message {
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0,0,0,0.8);
-            color: red;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            font-size: 20px;
-            padding: 20px;
-            box-sizing: border-box;
-            z-index: 100;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgba(0, 0, 0, 0.6);
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 16px;
+            z-index: 10;
+            display: none; /* Oculto por defecto */
         }
     </style>
 </head>
 <body>
-    <video id="videoPlayer" autoplay></video>
+    <video id="videoPlayer" autoplay muted></video>
 
-    <button id="unmuteButton">Activar Sonido</button> 
+    <button id="unmuteButton">Activar Sonido</button>
 
     <script type="text/javascript">
         // --- Función para enviar mensajes a Kodular (esencial para depuración) ---
         function logToKodular(message) {
+            // Este método de comunicación funciona con el componente WebViewer de Kodular (App Inventor)
             if (window.AppInventor && window.AppInventor.setWebViewString) {
                 window.AppInventor.setWebViewString(message);
             } else {
+                // Si estás depurando en un navegador de escritorio, usa console.log
                 console.log("Kodular Debug: " + message);
             }
         }
         // --------------------------------------------------------------------------
 
         // La URL de tu manifiesto. Vuelve a verificar si es la correcta y accesible.
+        // Si sigue sin funcionar, PRUEBA CON UNA DE LAS URLS DE PRUEBA que te di antes.
         const manifestUri = 'https://sam-py-edge05.tigo.com.py/ccur-session/7f6e3fdb59994965abed8dd5c6faccf517487270122031b65a320aeed11ebae01d90082191a3c1a5MrOL1SVX7zpX7GuV2tRmo/VMX4_widevine/rolling-buffer/TigoSportsHD/TigoSportsHD/transmux/index.mpd';
 
         async function initApp() {
             logToKodular('1. Aplicación HTML cargada y DOM listo. Iniciando Shaka Player...');
 
+            // Instala los polyfills para asegurar la compatibilidad con Shaka Player.
             shaka.polyfill.installAll();
             logToKodular('2. Shaka Polyfills instalados.');
 
+            // Obtiene el elemento de video por su ID.
             const video = document.getElementById('videoPlayer');
             if (!video) {
                 logToKodular('ERROR: Elemento de video no encontrado. ID incorrecto?');
-                displayError('Error de HTML', 'Elemento de video no encontrado. ID incorrecto?');
                 return;
             }
             logToKodular('3. Elemento de video (' + video.id + ') obtenido.');
 
+            // Crea una nueva instancia de Shaka Player.
             const player = new shaka.Player(video);
-            window.player = player; 
+            window.player = player; // Hacemos el player accesible globalmente para control externo.
             logToKodular('4. Instancia de Shaka Player creada.');
 
+            // Configura la parte de DRM. Si tu video no usa Clear Keys o esta configuración es incorrecta,
+            // esto podría ser la causa del problema.
             player.configure({
                 drm: {
                     clearKeys: {
@@ -104,94 +103,63 @@
             });
             logToKodular('5. Configuración de DRM (Clear Keys) aplicada.');
 
+            // Añade un oyente de eventos para capturar los errores del reproductor.
             player.addEventListener('error', onPlayerErrorEvent);
             logToKodular('6. Listener de errores añadido.');
 
             try {
+                // Intenta cargar el manifiesto del video.
                 logToKodular('7. Intentando cargar manifiesto: ' + manifestUri);
                 await player.load(manifestUri);
                 logToKodular('8. Manifiesto cargado con éxito!');
 
-                // Intentar reproducir el video. Esto PUEDE ser bloqueado si el audio está presente y no hay gesto del usuario.
+                // Si el video está configurado con 'autoplay' y 'muted', debería empezar a reproducir.
+                // Sin embargo, podemos intentar llamar a play() explícitamente para asegurar.
                 try {
-                    const playPromise = video.play();
-                    if (playPromise !== undefined) {
-                        playPromise.then(() => {
-                            logToKodular('9. Video está reproduciendo automáticamente con audio.');
-                        }).catch(error => {
-                            // La reproducción automática fue bloqueada.
-                            logToKodular('ADVERTENCIA: Autoplay con audio fue impedido. Error: ' + error.name + ' - ' + error.message);
-                            displayError('Reproducción Automática Bloqueada', 'Toca la pantalla para reproducir el video con sonido.', true);
-                            
-                            // Opcional: Si el autoplay falla, puedes mutear y reintentar, o mostrar un botón de play.
-                            // video.muted = true;
-                            // video.play();
-                            // logToKodular('Video se reproduce silenciado después de que el autoplay con audio fallara.');
-                        });
+                    await video.play();
+                    logToKodular('9. Video está reproduciendo (o intentando reproducir).');
+                } catch (autoplayError) {
+                    logToKodular('ADVERTENCIA: Autoplay fue impedido (incluso con muted): ' + autoplayError.name + ' - ' + autoplayError.message);
+                    // Aquí podrías añadir un botón en el centro de la pantalla que diga "Tocar para reproducir"
+                    // y que, al tocarlo, llame a video.play().
+                }
+
+                // Lógica para el botón de unmute (si lo usas)
+                const unmuteBtn = document.getElementById('unmuteButton');
+                if (unmuteBtn) {
+                    if (video.muted) {
+                        unmuteBtn.style.display = 'block'; // Muestra el botón si está muteado
                     }
-                } catch (generalPlayError) {
-                    // Esto puede ocurrir si video.play() lanza un error síncrono.
-                    logToKodular('ERROR SÍNCRONO al intentar play(): ' + generalPlayError.message);
-                    displayError('Error de Play', generalPlayError.message);
+                    unmuteBtn.onclick = () => {
+                        video.muted = false;
+                        unmuteBtn.style.display = 'none';
+                        logToKodular('Audio desmuteado por el usuario.');
+                    };
                 }
 
             } catch (error) {
+                // Esto capturará errores durante el player.load()
                 onPlayerError(error);
-                logToKodular('ERROR FATAL al cargar el video: Código ' + error.code + ', Mensaje: ' + error.message);
+                logToKodular('ERROR FATAL al cargar el video: Código ' + error.code + ', Mensaje: ' + error.message + '. Objeto error: ' + JSON.stringify(error));
             }
         }
 
-        // --- Funciones de manejo de errores y visualización ---
+        // --- Funciones de manejo de errores ---
         function onPlayerErrorEvent(event) {
             onPlayerError(event.detail);
         }
 
         function onPlayerError(error) {
             console.error('Shaka Player Error:', error);
-            let errorMessage = 'Error desconocido al cargar el video.';
-            if (error && error.code) {
-                errorMessage = `Código: ${error.code}<br>`;
-                if (error.message) errorMessage += `Mensaje: ${error.message}`;
-                
-                // Errores comunes de Shaka Player que puedes traducir o manejar
-                if (error.code === 6001) errorMessage = "Fallo de red al cargar el manifiesto. Revisa tu conexión.";
-                else if (error.code === 4012) errorMessage = "Contenido no soportado por el navegador/dispositivo.";
-                else if (error.code === 6006) errorMessage = "Fallo de DRM. Las claves o licencias son incorrectas.";
-            }
-            displayError('Error de Reproducción', errorMessage);
-        }
+            // Mostrar un mensaje de error visible en la pantalla del WebView
+            const errorContainer = document.createElement('div');
+            errorContainer.style.cssText = 'position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.8); color: red; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; font-size: 20px; padding: 20px; box-sizing: border-box;';
+            errorContainer.innerHTML = '<h1>Error de Reproducción</h1><p>Código: ' + (error.code || 'Desconocido') + '</p><p>' + (error.message || 'Error desconocido.') + '</p><p>Intenta de nuevo o verifica tu conexión.</p>';
+            document.body.appendChild(errorContainer);
 
-        function displayError(title, message, interactive = false) {
-            let errorContainer = document.querySelector('.error-message');
-            if (!errorContainer) {
-                errorContainer = document.createElement('div');
-                errorContainer.className = 'error-message';
-                document.body.appendChild(errorContainer);
-            }
-            errorContainer.innerHTML = `<h1>${title}</h1><p>${message}</p>`;
-
-            if (interactive) {
-                errorContainer.onclick = () => {
-                    const video = document.getElementById('videoPlayer');
-                    if (video) {
-                        video.play().then(() => {
-                            errorContainer.remove(); // Oculta el mensaje si se reproduce
-                            logToKodular('Video reproducido por interacción del usuario.');
-                        }).catch(e => {
-                            logToKodular('Fallo al reproducir por interacción: ' + e.message);
-                            errorContainer.innerHTML += '<p style="color:yellow;">Error al intentar reproducir. ' + e.message + '</p>';
-                        });
-                    }
-                };
-                errorContainer.style.cursor = 'pointer';
-                errorContainer.innerHTML += '<p style="font-size: 16px; margin-top: 15px;">(Toca aquí para intentar reproducir)</p>';
-            } else {
-                 errorContainer.style.cursor = 'default';
-                 errorContainer.onclick = null;
-            }
-            logToKodular(`Mostrando error: ${title} - ${message}`);
+            logToKodular('Shaka Error Reportado: Código ' + (error.code || 'N/A') + ', Mensaje: ' + (error.message || 'N/A') + ', Severity: ' + (error.severity || 'N/A'));
         }
-        // -------------------------------------------------------------
+        // ------------------------------------
 
         // Asegúrate de que el DOM esté completamente cargado antes de inicializar Shaka Player.
         document.addEventListener('DOMContentLoaded', initApp);
@@ -203,6 +171,8 @@
             if (video) {
                 video.muted = true;
                 logToKodular('Video muteado desde Kodular.');
+                const unmuteBtn = document.getElementById('unmuteButton');
+                if (unmuteBtn) unmuteBtn.style.display = 'block';
             }
         };
 
@@ -211,6 +181,8 @@
             if (video) {
                 video.muted = false;
                 logToKodular('Video desmuteado desde Kodular.');
+                const unmuteBtn = document.getElementById('unmuteButton');
+                if (unmuteBtn) unmuteBtn.style.display = 'none';
             }
         };
 
@@ -219,6 +191,8 @@
             if (video) {
                 video.muted = !video.muted;
                 logToKodular('Mute/Unmute alternado a: ' + video.muted);
+                const unmuteBtn = document.getElementById('unmuteButton');
+                if (unmuteBtn) unmuteBtn.style.display = video.muted ? 'block' : 'none';
             }
         };
 
