--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         // La URL de tu manifiesto. Vuelve a verificar si es la correcta y accesible.
         // Si sigue sin funcionar, PRUEBA CON UNA DE LAS URLS DE PRUEBA que te di antes.
-        const manifestUri = 'https://sam-py-edge05.tigo.com.py/ccur-session/7f6e3fdb59994965abed8dd5c6faccf517487270122031b65a320aeed11ebae01d90082191a3c1a5MrOL1SVX7zpX7GuV2tRmo/VMX4_widevine/rolling-buffer/TigoSportsHD/TigoSportsHD/transmux/index.mpd';
+        const manifestUri = 'https://opchannel01.tigosports.com.py/VMX4_widevine/rolling-buffer/TigoSportsHD/TigoSportsHD/transmux/master.mpd?dvr_window_length=30';
 
         async function initApp() {
             logToKodular('1. Aplicación HTML cargada y DOM listo. Iniciando Shaka Player...');
