--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		</div>
 	</section>
 	<script type="text/javascript">
-const youtube_theme_manifestUri = 'https://sam-py-edge05.tigo.com.py/VMX4_widevine/rolling-buffer/TigoSportsHD/TigoSportsHD/transmux/index.mpd?dvr_window_length=30';
+const youtube_theme_manifestUri = 'https://d3kzwqwnq1f7tq.cloudfront.net/out/v1/25ca218d53194065bedf6d998ace462e/index.mpd?dvr_window_length=30';
 async function init() {
   const video = document.getElementById('youtube-theme');
     const ui = video['ui'];
@@ -103,7 +103,7 @@ async function init() {
   drm                               : {
   clearKeys                         : {
   // 'key-id-in-hex'                : 'key-in-hex',
-"b52a7fa91fb031a3d6f2a505414b6fcd":  "a655a22f9c0a66574b5d95dee212fbf9" ,
+"1c62a216a5fe423f959cb1ca02f62d83":  "54f2fdc83c1da33cd9269bf21e08218c" ,
     }
   }
 });
@@ -152,3 +152,4 @@ document.addEventListener('shaka-ui-load-failed', initFailed);
 </script>
 </body>
 </html>
+
